fix : dark mode 진입 시 목차 색상 변경

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -20,7 +20,7 @@
 }
 
 .notion-table-of-contents-item-body {
-  @apply dark:border-b-gray-200;
+  @apply dark:border-b-gray-600;
 }
 
 .notion-toggle {
